File was updated.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="input-div">
             <label for="number"></label>
-            <input type="number" name="number" id="number" placeholder="Write your guess...">
+            <input type="number" name="number" id="number" placeholder="Write your guess..." onkeydown="focus()">
             <button id="check" class="show">CHECK</button>
             <button id="restart" class="dont_show"><a href="">RESTART</a></button>
         </div>
